--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="styl<body>
 	<br>
 	<center>
-		<span style="font-size:36px">The Marvel Universe: A Journey of Heroes</span>
+		<span style="font-size:36px">The Marvel Universe:  Heroes of the World</span>
 		<table align=center width=600px>
 			<tr>
 				<td align=center width=100px>
